<resources>
    <string name="app_name">Todo App</string>
    <string name="tNama">Masukkan Nama</string>
    <string name="tPassword">Masukkan Password</string>
    <string name="bsignin">Sign In</string>
    <string name="lWelcome">Welcome in Todo App</string>
    <string name="lNama">Nama</string>
    <string name="lPassword">Password</string>
    <string name="tRegister">Register</string>
    <string name="bregister">Register</string>
    <string name="tEmail">Masukkan Email</string>
    <string name="lEmail">Email</string>
    <string name="tRepassword">Masukkan Password</string>
    <string name="lRepassword">Re-Password</string>
    <string name="lDatang">Selamat Datang</string>
    <string name="edTask">Masukkan Task</string>
    <string name="edJenisTask">Masukkan Jenis Task</string>
    <string name="edTimeTask">Masukkan Lama Task</string>
    <string name="mSubmit">Submit</string>
    <string name="mLogout">logout</string>
</resources>